# itscm_exercices-C-serie1

./: .gitignore  CMakeLists.txt
exercice10/: main.c
exercice11/: main.c
exercice12/: main.c
exercice13/: main.c
exercice14/: main.c
exercice15/: main.c
exercice16/: main.c
exercice17/: main.c
exercice18/: main.c
exercice19/: main.c
exercice20/: main.c
exercice21/: main.c
exercice22/: main.c
exercice23/: main.c
exercice24/: main.c
exercice25/: CMakeLists.txt  main.c
exercice26/: CMakeLists.txt  main.c
exercice27/: CMakeLists.txt  main.c
exercice28/: CMakeLists.txt  main.c
exercice29/: CMakeLists.txt  main.c
exercice30/: CMakeLists.txt  main.c
exercice31/: CMakeLists.txt  main.c
exercice32/: CMakeLists.txt  main.c
exercice33/: CMakeLists.txt  main.c
exercice34/: CMakeLists.txt  main.c
exercice35/: CMakeLists.txt  main.c
exercice36/: CMakeLists.txt  main.c
exercice37/: CMakeLists.txt  main.c
exercice38/: CMakeLists.txt  main.c
exercice39/: CMakeLists.txt  main.c
exercice40/: CMakeLists.txt  main.c
exercice41/: CMakeLists.txt  main.c
exercice9/: main.c
