cmake_minimum_required(VERSION 3.29)
project(exercices_C2 C)

# Définir la norme C
set(CMAKE_C_STANDARD 23)

# Ajouter les sous-dossiers pour chaque exercice
add_subdirectory(exercice9)
add_subdirectory(exercice10)
add_subdirectory(exercice11)
add_subdirectory(exercice12)
add_subdirectory(exercice13)
add_subdirectory(exercice14)
add_subdirectory(exercice15)
add_subdirectory(exercice16)
add_subdirectory(exercice17)
add_subdirectory(exercice18)
add_subdirectory(exercice19)
add_subdirectory(exercice20)
add_subdirectory(exercice21)
add_subdirectory(exercice22)
add_subdirectory(exercice23)
add_subdirectory(exercice24)
add_subdirectory(exercice25)
add_subdirectory(exercice26)
add_subdirectory(exercice27)
add_subdirectory(exercice28)
add_subdirectory(exercice29)
add_subdirectory(exercice30)
add_subdirectory(exercice31)
add_subdirectory(exercice32)
add_subdirectory(exercice33)
add_subdirectory(exercice34)
add_subdirectory(exercice35)
add_subdirectory(exercice36)
add_subdirectory(exercice37)
add_subdirectory(exercice38)
add_subdirectory(exercice39)
add_subdirectory(exercice40)
add_subdirectory(exercice41)

